[gd_scene load_steps=10 format=3 uid="uid://cuc3xhfesrbn8"]

[ext_resource type="Script" path="res://StarMap.gd" id="1_ou7d0"]
[ext_resource type="PackedScene" uid="uid://b3tpjaxhqm656" path="res://ChatBox.tscn" id="2_cyfor"]
[ext_resource type="Texture2D" uid="uid://c5obfycju1fai" path="res://tex/grid.png" id="2_ddibb"]
[ext_resource type="Script" path="res://camera.gd" id="3_uxrqp"]
[ext_resource type="Script" path="res://Minimap.gd" id="5_x17px"]
[ext_resource type="Texture2D" uid="uid://dm4kmod47im66" path="res://icon.svg" id="6_0oyuw"]

[sub_resource type="Animation" id="Animation_of1el"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Menu:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(300, 224)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Menu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BG:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kkl0k"]
resource_name = "showMenu"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.05, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Menu:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2i(300, 1), Vector2i(300, 500)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Menu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BG:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ob0nn"]
_data = {
"RESET": SubResource("Animation_of1el"),
"showMenu": SubResource("Animation_kkl0k")
}

[node name="StarMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ou7d0")

[node name="Icon2" type="Sprite2D" parent="."]
light_mask = 3
position = Vector2(0, -2)
scale = Vector2(0.179688, 0.179688)
texture = ExtResource("6_0oyuw")

[node name="Grid" type="Sprite2D" parent="."]
visibility_layer = 2
texture_filter = 6
texture_repeat = 3
texture = ExtResource("2_ddibb")
region_enabled = true
region_rect = Rect2(0, 0, 8192, 4608)

[node name="Notes" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Camera2D" type="Camera2D" parent="."]
visibility_layer = 3
script = ExtResource("3_uxrqp")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MenuButton" type="Button" parent="UI"]
offset_right = 138.0
offset_bottom = 57.0
text = "Menu"

[node name="ChatBox" parent="UI" instance=ExtResource("2_cyfor")]
anchors_preset = 2
anchor_top = 1.0
anchor_right = 0.0
offset_left = 8.0
offset_top = -295.0
offset_right = 539.0
offset_bottom = -7.0
grow_horizontal = 1
grow_vertical = 0

[node name="MiniMap" type="SubViewportContainer" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -144.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("5_x17px")

[node name="SubViewport" type="SubViewport" parent="UI/MiniMap"]
disable_3d = true
handle_input_locally = false
canvas_cull_mask = 4294967293
size = Vector2i(256, 144)
render_target_update_mode = 4

[node name="MiniMapCam" type="Camera2D" parent="UI/MiniMap/SubViewport"]
visibility_layer = 2
zoom = Vector2(0.03, 0.03)

[node name="Menus" type="CanvasLayer" parent="."]
layer = 2

[node name="MenuAnimPlayer" type="AnimationPlayer" parent="Menus"]
libraries = {
"": SubResource("AnimationLibrary_ob0nn")
}

[node name="BG" type="Panel" parent="Menus"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Menu" type="Window" parent="Menus"]
transparent_bg = true
title = "Menu"
position = Vector2i(32, 64)
size = Vector2i(300, 224)
transient = true
exclusive = true
unresizable = true

[node name="Vbox" type="VBoxContainer" parent="Menus/Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="StatusLabel" type="Label" parent="Menus/Menu/Vbox"]
layout_mode = 2
text = "Not connected to StarMap Server"
horizontal_alignment = 1

[node name="ClientName" type="LineEdit" parent="Menus/Menu/Vbox"]
layout_mode = 2
placeholder_text = "Username"
alignment = 1

[node name="SocketURL" type="LineEdit" parent="Menus/Menu/Vbox"]
layout_mode = 2
text = "ws://localhost:5000"
placeholder_text = "StarMap Server URL"
alignment = 1

[node name="ConnectURL" type="Button" parent="Menus/Menu/Vbox"]
layout_mode = 2
text = "Connect to StarMap Server"

[node name="HSeparator" type="HSeparator" parent="Menus/Menu/Vbox"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="CreateMap" type="Button" parent="Menus/Menu/Vbox"]
layout_mode = 2
disabled = true
text = "Create a StarMap"

[node name="JoinMap" type="Button" parent="Menus/Menu/Vbox"]
layout_mode = 2
disabled = true
text = "Join a StarMap"

[node name="HSeparator2" type="HSeparator" parent="Menus/Menu/Vbox"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="LeaveMap" type="Button" parent="Menus/Menu/Vbox"]
layout_mode = 2
disabled = true
text = "Leave StarMap"

[node name="CreateMap" type="Window" parent="Menus/Menu"]
title = "Create a StarMap"
initial_position = 1
size = Vector2i(300, 128)
visible = false
transient = true
popup_window = true

[node name="Vbox" type="VBoxContainer" parent="Menus/Menu/CreateMap"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StatusLabel" type="Label" parent="Menus/Menu/CreateMap/Vbox"]
layout_mode = 2
text = "Enter a code through wich users join"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MapName" type="LineEdit" parent="Menus/Menu/CreateMap/Vbox"]
layout_mode = 2
placeholder_text = "StarMap Code"
alignment = 1
max_length = 12
secret_character = "#"

[node name="CreateStarMap" type="Button" parent="Menus/Menu/CreateMap/Vbox"]
layout_mode = 2
text = "Create StarMap"

[node name="JoinMap" type="Window" parent="Menus/Menu"]
title = "Join a StarMap"
initial_position = 1
size = Vector2i(300, 128)
visible = false
transient = true
popup_window = true

[node name="Vbox" type="VBoxContainer" parent="Menus/Menu/JoinMap"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StatusLabel" type="Label" parent="Menus/Menu/JoinMap/Vbox"]
layout_mode = 2
text = "Enter a StarMap Code"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MapName" type="LineEdit" parent="Menus/Menu/JoinMap/Vbox"]
layout_mode = 2
placeholder_text = "StarMap Code"
alignment = 1
max_length = 12
secret_character = "#"

[node name="JoinStarMap" type="Button" parent="Menus/Menu/JoinMap/Vbox"]
layout_mode = 2
text = "Join StarMap"

[connection signal="pressed" from="UI/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="close_requested" from="Menus/Menu" to="." method="_on_menu_close_requested"]
[connection signal="text_changed" from="Menus/Menu/Vbox/ClientName" to="." method="_on_client_name_text_changed"]
[connection signal="pressed" from="Menus/Menu/Vbox/ConnectURL" to="." method="_on_connect_url_pressed"]
[connection signal="pressed" from="Menus/Menu/Vbox/CreateMap" to="." method="_on_create_map_pressed"]
[connection signal="pressed" from="Menus/Menu/Vbox/JoinMap" to="." method="_on_join_map_pressed"]
[connection signal="pressed" from="Menus/Menu/Vbox/LeaveMap" to="." method="_on_leave_map_pressed"]
[connection signal="close_requested" from="Menus/Menu/CreateMap" to="." method="_on_create_map_close_requested"]
[connection signal="pressed" from="Menus/Menu/CreateMap/Vbox/CreateStarMap" to="." method="_on_create_star_map_pressed"]
[connection signal="close_requested" from="Menus/Menu/JoinMap" to="." method="_on_join_map_close_requested"]
[connection signal="pressed" from="Menus/Menu/JoinMap/Vbox/JoinStarMap" to="." method="_on_join_star_map_pressed"]
